system/cms/themes/pyrocms/css/workless/workless.css
/* ... */
.form_inputs .datetime_input select {
	width:  100px;
}

/* ----------------------------------
 *   Tables
 * ---------------------------------- */
table {
  width: 113%;
  margin: -16px;
  margin-bottom: 18px;
  padding: 0;
  border-collapse: collapse;
  font-size: 11px;
}

table th, table td {
  padding: 10px 10px 9px;
  line-height: 13.5px;
  text-align: left;
  vertical-align: middle;
}

table th.collapse, table td.collapse {
	display: none;
}

table th {
  padding-top: 9px;
  font-weight: bold;
  border-bottom-width: 2px;
}

.zebra-striped tbody tr:nth-child(odd) td {
  background-color: #f9f9f9;
}

.zebra-striped tbody tr:hover td {
  background-color: #f5f5f5;
}

.zebra-striped .header {
  cursor: pointer;
}

.zebra-striped .header:after {
  content: "";
  float: right;
  margin-top: 7px;
  border-width: 0 4px 4px;
  border-style: solid;
  border-color: #000 transparent;
  visibility: hidden;
}

.zebra-striped .headerSortUp, .zebra-striped .headerSortDown {
  background-color: rgba(141, 192, 219, 0.25);
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  -webkit-border-radius: 3px 3px 0 0;
  -moz-border-radius: 3px 3px 0 0;
  border-radius: 3px 3px 0 0;
}

.zebra-striped .header:hover:after {
  visibility: visible;
}

.zebra-striped .headerSortDown:after, .zebra-striped .headerSortDown:hover:after {
  visibility: visible;
  filter: alpha(opacity=60);
  -khtml-opacity: 0.6;
  -moz-opacity: 0.6;
  opacity: 0.6;
}

.zebra-striped .headerSortUp:after {
  border-bottom: none;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  visibility: visible;
  -webkit-grid-shadow: none;
  -moz-grid-shadow: none;
  grid-shadow: none;
  filter: alpha(opacity=60);
  -khtml-opacity: 0.6;
  -moz-opacity: 0.6;
  opacity: 0.6;
}

table .blue {
  color: #049cdb;
  border-bottom-color: #049cdb;
}

table .headerSortUp.blue, table .headerSortDown.blue {
  background-color: #ade6fe;
}

table .green {
  color: #46a546;
  border-bottom-color: #46a546;
}

table .headerSortUp.green, table .headerSortDown.green {
  background-color: #cdeacd;
}

table .red {
  color: #9d261d;
  border-bottom-color: #9d261d;
}

table .headerSortUp.red, table .headerSortDown.red {
  background-color: #f4c8c5;
}

table .yellow {
  color: #ffc40d;
  border-bottom-color: #ffc40d;
}

table .headerSortUp.yellow, table .headerSortDown.yellow {
  background-color: #fff6d9;
}

table .orange {
  color: #f89406;
  border-bottom-color: #f89406;
}

table .headerSortUp.orange, table .headerSortDown.orange {
  background-color: #fee9cc;
}

table .purple {
  color: #7a43b6;
  border-bottom-color: #7a43b6;
}

table .headerSortUp.purple, table .headerSortDown.purple {
  background-color: #e2d5f0;
}

table .actions {
	text-align: right;
}
table .actions a {
	display: block;
	margin-bottom: 5px;
	text-align: center;
}

/* ----------------------------------
 *   Helpers
 * ---------------------------------- */

/* Buttons */
.btn {
  cursor: pointer;
  display: inline-block;
  background-color: #e6e6e6;
  background-repeat: no-repeat;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(0.25, #ffffff), to(#e6e6e6));
  background-image: -webkit-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
  background-image: -moz-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
  background-image: -ms-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
  background-image: -o-linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
  background-image: linear-gradient(#ffffff, #ffffff 0.25, #e6e6e6);
  padding: 5px 10px 5px 10px;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  color: #333333;
  font-size: 13px;
  line-height: 18px;
  border: 1px solid #ccc;
  border-bottom-color: #bbb;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  grid-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-transition: 250ms linear all;
  -moz-transition: 250ms linear all;
  transition: 250ms linear all;
}

.btn, .btn a, a.btn {
  color: #ffffff;
}

.btn:hover, .btn a:hover, a.btn:hover {
  color: #ffffff;
}

.btn.red {
  background-color: #9d261d;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#d83a2e), to(#9d261d));
  background-image: -moz-linear-gradient(#d83a2e, #9d261d);
  background-image: -ms-linear-gradient(#d83a2e, #9d261d);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d83a2e), color-stop(100%, #9d261d));
  background-image: -webkit-linear-gradient(#d83a2e, #9d261d);
  background-image: -o-linear-gradient(#d83a2e, #9d261d);
  background-image: linear-gradient(#d83a2e, #9d261d);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border: 1px solid #5c1611;
  color: #fff!important;
}

.btn.red:hover {
  background-color: #d83a2e;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#9d261d), to(#d83a2e));
  background-image: -moz-linear-gradient(#9d261d, #d83a2e);
  background-image: -ms-linear-gradient(#9d261d, #d83a2e);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9d261d), color-stop(100%, #d83a2e));
  background-image: -webkit-linear-gradient(#9d261d, #d83a2e);
  background-image: -o-linear-gradient(#9d261d, #d83a2e);
  background-image: linear-gradient(#9d261d, #d83a2e);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border: 1px solid #5c1611;
}
/* ... */

